# cuda

./: .gitignore  README.md
0_device_query/: CMakeLists.txt  README.md  device_query.cu
0_device_query/include/: compute_capability.h
1_Intro_Threads/: 1_print_threadIDs.cu  2_print_grid_details.cu  3_calculate_unique_id_1Dgrid.cu  4_calculate_unique_id_2Dgrid.cu  CMakeLists.txt  README.md  calculate_unique_id_1Dgrid.cu  print_grid_details.cu  print_threadIDs.cu
2_memory_stuff/: README.md
2_warps/: 1_warp.cu  2_right_blocksize_warp.cu  3_warp_divergence.cu  README.md
3_memory_stuff/: 1_vecadd_global_memory.cu  2_vecadd_managed_memory.cu  3_vecadd_darray.cu  CMakeLists.txt  README.md
3_memory_stuff/include/: common_routines.h  d_array.h
4_streams/: README.md
5_multi_gpu/: README.md
6_mpi_cuda/: inner_product.cu
7_cuBlas/: 1_level1.cu  CMakeLists.txt  README.md
8_cuSparse/: 1_MatrixAddition.cu  README.md  a.out
98_misc/: README.md
98_misc/practise_examples/MatrixMultiplication/: MatMul.cu
99_Extras/: README.md
99_Extras/cpp/: CMakeLists.txt  MainDeviceArray.cu  MatMul.cu  a.out
9_cuSolver/: README.md
pics/: threads.jfif
practise_examples/MatrixMultiplication/: a.out
